--- a/src/locales/english/translation.json
+++ b/src/locales/english/translation.json
@@ -9,16 +9,7 @@
   "headerContact": "Contact Us",
 
   "homeHead": "Ali Web service",
-  "homeContent1": "We specialize in creating professional websites and customized applications – perfectly tailored for companies, freelancers, or personal projects.",
-  "homeContent2": "Our comprehensive range of graphic and advertising services helps you make your brand visible and unmistakable:",
-  "homeContent3": "1. Logo designs that stay in memory",
-  "homeContent4": "2. Flyers and promotional materials for effective communication",
-  "homeContent5": "3. Individually designed business cards for a professional appearance",
-  "homeContent6": "4. Digital TV menus – ideal for restaurants, bars, and cafés",
-  "homeContent7": "5. Personalized pens, T-shirts, and promotional gifts",
-  "homeContent8": "6. Car decals and stickers with durable, appealing design",
-  "homeContent9": "We transform your ideas into modern, creative, and effective solutions – just the way you want.",
-  "homeContent10": "Contact us and give your project a unique identity!",
+  "homeContent": "For website design and development services and phone applications operating on the Android and iOS operating systems, the company provides integrated web solutions to all institutions in the world and has a huge customer base in all countries of the world.",
   "homeRequest": "Request a Quote",
 
   "aboutHead1": "Learn More About Us",
@@ -93,6 +84,15 @@
   "portfolioHead1": "Newest Portfolio",
   "portfolioHead2": "We bring your digital vision to life",
   "portfolioShowAll": "Show All",
+  "portfolioProject1": "Gelateria Margherita",
+  "portfolioProject2": "Pio Pio Pizza",
+  "portfolioProject3": "Ali Pizza & Kebab",
+  "portfolioProject4": "Homs Food GmbH",
+  "portfolioProject5": "Stadtli Kebab Pizza",
+  "portfolioProject6": "Demo Pizza Kebab",
+  "portfolioProject7": "Meals App",
+  "portfolioProject8": "Margherita Production",
+  "portfolioProject9": "Homs Food Warehouse",
 
   "careerHead1": "Careers",
   "careerHead2": "Build your future with our company",
@@ -166,27 +166,17 @@
   "serviceDetailsFormList5": "Mobile Application Development",
   "serviceDetailsFormList6": "Website Development",
 
-
-
   "ourPortfolioHead": "We Bring Your Digital Vision to Life",
   "ourPortfolioContent": "At Ali Corporation, we excel in providing innovative and advanced web and mobile solutions. We specialize in designing and developing websites and mobile applications tailored to the unique needs of our clients. Discover how we can help you achieve your digital goals with the highest quality and best standards.",
   "ourPortfolioForm1": "Search your projects…",
   "ourPortfolioForm2": "Websites",
   "ourPortfolioFormList1": "Recruitment",
-  "ourPortfolioFormList2": "Law Firm Websites",
   "ourPortfolioForm3": "Applications",
   "ourPortfolioFormList3": "Maintenance Apps",
   "ourPortfolioFormList4": "E-Commerce Stores",
   "ourPortfolioForm4": "UI/UX Design",
   "ourPortfolioForm5": "Graphic Design",
   "ourPortfolioaddFiltersHere": "Add filters here",
-  "ourPortfolioForm6": "Project Type/Technology",
-  "ourPortfolioFormList5": "Application Design",
-  "ourPortfolioFormList6": "Website",
-  "ourPortfolioFormList7": "Control board",
-  "ourPortfolioFormList8": "Android Application",
-  "ourPortfolioFormList9": "iOS App",
-  "ourPortfolioFormList10": "Graphic Design",
   "ourPortfolioForm7": "Apply Filter",
   "ourPortfolioForm8": "Reset",
 
