--- a/src/locales/german/translation.json
+++ b/src/locales/german/translation.json
@@ -9,16 +9,7 @@
   "headerContact": "Kontaktieren Sie uns",
 
   "homeHead": "Ali Webservice",
-  "homeContent1": "Wir sind spezialisiert auf die Erstellung professioneller Websites und maßgeschneiderter Anwendungen – perfekt abgestimmt auf Unternehmen, Selbstständige oder persönliche Projekte.",
-  "homeContent2": "Unser umfassendes Angebot an Grafik- und Werbedienstleistungen hilft dir dabei, deine Marke sichtbar und unverwechselbar zu machen:",
-  "homeContent3": "1. Logo-Designs, die im Gedächtnis bleiben",
-  "homeContent4": "2. Flyer und Werbematerialien für eine effektive Kommunikation",
-  "homeContent5": "3. Individuell gestaltete Visitenkarten für einen professionellen Auftritt",
-  "homeContent6": "4. Digitale TV-Menüs – ideal für Restaurants, Bars und Cafés",
-  "homeContent7": "5. Personalisierte Kugelschreiber, T-Shirts und Werbegeschenke",
-  "homeContent8": "6. Autoaufkleber und Sticker mit langlebigem, ansprechendem Design",
-  "homeContent9": "Wir verwandeln deine Ideen in moderne, kreative und effektive Lösungen – ganz nach deinen Wünschen.",
-  "homeContent10": "Kontaktiere uns und gib deinem Projekt ein unverwechselbares Gesicht!",
+  "homeContent": "Für Dienstleistungen in den Bereichen Website-Design und -Entwicklung sowie mobile Anwendungen für die Betriebssysteme Android und iOS bietet das Unternehmen integrierte Weblösungen für alle Institutionen weltweit und verfügt über eine große Kundenbasis in allen Ländern der Welt.",
   "homeRequest": "Angebotsanfrage",
 
   "aboutHead1": "Erfahre mehr über uns",
@@ -93,6 +84,15 @@
   "portfolioHead1": "Neuestes Portfolio",
   "portfolioHead2": "Wir erwecken Ihre digitale Vision zum Leben",
   "portfolioShowAll": "Alle anzeigen",
+  "portfolioProject1": "Gelateria Margherita",
+  "portfolioProject2": "Pio Pio Pizza",
+  "portfolioProject3": "Ali Pizza & Kebab",
+  "portfolioProject4": "Homs Food GmbH",
+  "portfolioProject5": "Stadtli Kebab Pizza",
+  "portfolioProject6": "Demo Pizza Kebab",
+  "portfolioProject7": "App Pasti",
+  "portfolioProject8": "Produzione Margherita",
+  "portfolioProject9": "Magazzino Homs Food",
 
   "careerHead1": "Karriere",
   "careerHead2": "Gestalten Sie Ihre Zukunft mit unserem Unternehmen",
