--- a/src/locales/italian/translation.json
+++ b/src/locales/italian/translation.json
@@ -9,16 +9,7 @@
   "headerContact": "Contattaci",
 
   "homeHead": "Servizio Web Ali",
-  "homeContent1": "Siamo specializzati nella creazione di siti web professionali e applicazioni personalizzate - perfetti per aziende, liberi professionisti o progetti personali.",
-  "homeContent2": "La nostra gamma completa di servizi grafici e pubblicitari ti aiuta a rendere il tuo marchio visibile e riconoscibile:",
-  "homeContent3": "1. Loghi memorabili",
-  "homeContent4": "2. Volantini e materiali promozionali per una comunicazione efficace",
-  "homeContent5": "3. Biglietti da visita personalizzati per un'immagine professionale",
-  "homeContent6": "4. Menu TV digitali - ideali per ristoranti, bar e caffetterie",
-  "homeContent7": "5. Penne, magliette e gadget personalizzati",
-  "homeContent8": "6. Adesivi per auto e sticker con design durevole e accattivante",
-  "homeContent9": "Trasformiamo le tue idee in soluzioni moderne, creative ed efficaci - secondo le tue esigenze.",
-  "homeContent10": "Contattaci e dai alla tua idea un'identità unica!",
+  "homeContent": "Per i servizi di progettazione e sviluppo di siti web e applicazioni mobili che operano sui sistemi operativi Android e iOS, l'azienda offre soluzioni web integrate a tutte le istituzioni del mondo e dispone di una vasta base di clienti in tutti i paesi del mondo.",
   "homeRequest": "Richiesta di preventivo",
 
   "aboutHead1": "Scopri di più su di noi",
@@ -93,6 +84,15 @@
   "portfolioHead1": "Portfolio più recente",
   "portfolioHead2": "Diamo vita alla tua visione digitale",
   "portfolioShowAll": "Mostra tutto",
+  "portfolioProject1": "Gelateria Margherita",
+  "portfolioProject2": "Pio Pio Pizza",
+  "portfolioProject3": "Ali Pizza & Kebab",
+  "portfolioProject4": "Homs Food GmbH",
+  "portfolioProject5": "Stadtli Kebab Pizza",
+  "portfolioProject6": "Demo Pizza Kebab",
+  "portfolioProject7": "App Pasti",
+  "portfolioProject8": "Produzione Margherita",
+  "portfolioProject9": "Magazzino Homs Food",
 
   "careerHead1": "Carriere",
   "careerHead2": "Costruisci il tuo futuro con la nostra azienda",
