--- a/src/locales/german/translation.json
+++ b/src/locales/german/translation.json
@@ -123,7 +123,7 @@
   "contactContent": "Unser professionelles Team verpflichtet sich, außergewöhnliche Ergebnisse in der Softwareentwicklung und im technischen Projektmanagement zu liefern. Teilen Sie uns die Details Ihres Projekts mit, damit wir eine maßgeschneiderte Lösung erstellen können, die Ihrer Vision entspricht.",
 
   "contactVisit": "Besuchen Sie uns",
-  "contactLocation": "1, Meine Adresse, Meine Straße, New York City, NY, USA",
+  "contactLocation": "Schlierenstrasse 41, 8902 Urdorf",
   "contactMessage": "Schreiben Sie uns",
   "contactCall": "Rufen Sie uns an unter",
 
@@ -212,3 +212,4 @@
   "faqDetailsHead": "Haben Sie eine Frage? Wir sind bereit, Ihnen zu antworten",
   "faqDetailsContent": "Bei Ali verstehen wir, dass Sie möglicherweise Fragen haben, bevor Sie Ihr Projekt mit uns starten. Deshalb haben wir die häufigsten Anfragen unserer Kunden gesammelt und klare Antworten vorbereitet, damit Sie Ihre Entscheidung mit Vertrauen treffen können. Ob Sie nach Servicedetails, Zahlungsmethoden oder Projektzeitplänen suchen – hier finden Sie alles. Und wenn Sie dennoch mehr Klärung benötigen, steht unser Team jederzeit bereit, Ihnen weiterzuhelfen."
 }
+
