--- a/src/locales/italian/translation.json
+++ b/src/locales/italian/translation.json
@@ -122,7 +122,7 @@
   "contactHead2": "Lasciaci aiutarti a costruire la tua prossima app.",
   "contactContent": "Il nostro team di professionisti si impegna a fornire risultati eccezionali nello sviluppo software e nella gestione tecnica dei progetti. Condividi con noi i dettagli del tuo progetto per creare una soluzione personalizzata che rispecchi la tua visione.",
   "contactVisit": "Visitaci",
-  "contactLocation": "1, Il mio indirizzo, La mia strada, New York City, NY, USA",
+  "contactLocation": "Schlierenstrasse 41, 8902 Urdorf",
   "contactMessage": "Scrivici",
   "contactCall": "Chiamaci al",
 
@@ -211,3 +211,4 @@
   "faqDetailsHead": "Hai una domanda? Siamo pronti a risponderti",
   "faqDetailsContent": "Da Ali comprendiamo che potresti avere domande prima di iniziare il tuo progetto con noi. Qui troverai tutto ciò che ti serve."
 }
+
